# window_manager

./: .gitignore  CMakeLists.txt  Choku.drawio  Makefile  README.md  main.cpp  test_program  xinitrc
include/: application.h  events.h  events.hpp  renderer.h  renderer.hpp  window_frame.h  window_manager.hpp
src/: CMakeLists.txt  application.cpp  events.cpp  main.cpp  renderer.cpp  window_manager.cpp
